Fixing about page - overflow-x

--- a/_sass/_container.scss
+++ b/_sass/_container.scss
@@ -17,7 +17,6 @@
     display: grid;
     height: 100vh;
     width: 100%;
-    overflow-x: hidden;
 }
 
 @media only screen and (min-width: 1200px) {
